--- a/raspberry-backend/templates/settings.html
+++ b/raspberry-backend/templates/settings.html
@@ -34,58 +34,88 @@
                 <table>
               <tr>
                 <td> <label class="small" for="inputVar1" >Buffer fill [ms]</label></td>
-                <td><input class="form-control py-1 input-editable" id="pressure_air_supply" type="number" value="11" name="timeout_threshold"  onclick="show_easy_numpad(this, buffer_fill_controller);lock();"  readOnly disabled/></td>
+                <td><input class="form-control py-1 input-editable" id="buff_fill" type="number" value="1"  onclick="show_easy_numpad(this, buff_fill_controller);lock();"  readOnly disabled/></td>
               </tr>
               <tr>
                 <td><span class="form-group"><label class="small" for="inputVar2">Buffer flush [ms]</label></td>
-                <td><input class="form-control py-1 input-editable" id="pressure_air_regulated" type="number" value="1" name="timeout_threshold"  onclick="show_easy_numpad(this, buffer_flush_controller);lock();"  readOnly disabled/></td>
+                <td><input class="form-control py-1 input-editable" id="buff_flush" type="number" value="1"   onclick="show_easy_numpad(this, buff_flush_controller);lock();"  readOnly disabled/></td>
 
               </tr>
               <tr>
                 <td><span class="form-group"><label class="small" for="inputVar3">Buffer loaded [ms]</label></td>
-                <td><input class="form-control py-1 input-editable" id="pressure_o2_supply" type="number" value=1 name="variable3"  /></span></td>
+                <td><input class="form-control py-1 input-editable" id="buff_loaded" type="number" value="1"   onclick="show_easy_numpad(this, buff_loaded_controller);lock();"  readOnly disabled/></td>
+
               </tr>
               <tr>
                 <td><span class="form-group"><label class="small" for="inputVar4">Buffer pre-fill [ms]</label></td>
-                <td><input class="form-control py-1 input-editable" id="pressure_o2_regulated" type="number" value=1 name="variable4"  /></span></td>
+                <td><input class="form-control py-1 input-editable" id="buff_prefill" type="number" value="1"   onclick="show_easy_numpad(this, buff_prefill_controller);lock();"  readOnly disabled/></td>
+
+                
               </tr>
               <tr>
                 <td><span class="form-group"><label class="small" for="inputVar5">Buffer pre-inhale [ms]</label></td>
-                <td><input class="form-control py-1 input-editable" id="pressure_buffer" type="number" value=1 name="variable4"  /></span></td>
+                <td><input class="form-control py-1 input-editable" id="buff_preinhale" type="number" value="1"   onclick="show_easy_numpad(this, buff_preinhale_controller);lock();"  readOnly disabled/></td>
+
               </tr>
               <tr>
                 <td><span class="form-group"><label class="small" for="inputVar6">Buffer purge [ms]</label></td>
-                <td><input class="form-control py-1 input-editable" id="pressure_inhale" type="number" value=1 name="variable4"  /></span></td>
+                <td><input class="form-control py-1 input-editable" id="buff_purge" type="number" value="1"   onclick="show_easy_numpad(this, buff_purge_controller);lock();"  readOnly disabled/></td>
+
               </tr>
               <tr>
                 <td><span class="form-group"><label class="small" for="inputVar7">Inhale [ms]</label></td>
-                <td><input class="form-control py-1 input-editable" id="pressure_patient" type="number" value=1 name="variable4"  /></span></td>
+                <td><input class="form-control py-1 input-editable" id="inhale" type="number" value="1"   onclick="show_easy_numpad(this, inhale_controller);lock();"  readOnly disabled/></td>
+
               </tr>
               <tr>
                 <td><span class="form-group"><label class="small" for="inputVar8">Pause [ms]</label></td>
-                <td><input class="form-control py-1 input-editable" id="readback_valve_air_in" type="number" value=1 name="variable4"  /></span></td>
+                <td><input class="form-control py-1 input-editable" id="pause" type="number" value="1"   onclick="show_easy_numpad(this, pause_controller);lock();"  readOnly disabled/></td>
+
               </tr>
               <tr>
                 <td><span class="form-group"><label class="small" for="inputVar9">Exhale [ms]</label></td>
-                  <td><input class="form-control py-1 input-editable" id="readback_valve_02_in" type="number" value=1 name="variable4"  /></span></td>
+                  <td><input class="form-control py-1 input-editable" id="exhale" type="number" value="1"   onclick="show_easy_numpad(this, exhale_controller);lock();"  readOnly disabled/></td>
+
               </tr>
-              <tr><td><span class="form-group"><label class="small" for="inputVar10">Exhale fill[ms]</label></td><td><input class="form-control py-1 input-editable" id="readback_valve_out" type="number" value=1 name="variable5"  /></span></td></tr>
+              <tr><td><span class="form-group"><label class="small" for="inputVar10">Exhale fill[ms]</label></td>
+              <td><input class="form-control py-1 input-editable" id="exhale_fill" type="number" value="1"   onclick="show_easy_numpad(this, exhale_fill_controller);lock();"  readOnly disabled/></td>
+
 
             </table>
           </td>
           <td>
             <table>
 
-          <tr><td><span class="form-group"><label class="small" for="inputVar11">Vavle (Air)</label></td><td><input class="form-control py-1 input-editable" id="readback_valve_scavenge" type="number" value=1 name="variable6"  /></span></td></tr>
-          <tr><td><span class="form-group"><label class="small" for="inputVar12">Valve (O2)</label></td><td><input class="form-control py-1 input-editable" id="readback_valve_purge" type="number" value=1 name="variable6"  /></span></td></tr>
-          <tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Inhale) [%]</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
-          <tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Exhale) [%]</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
-          <tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Purge)</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
-          <tr><td><span class="form-group"><label class="small" for="inputVar13">PEEP [cmH2O]</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
-          <tr><td><span class="form-group"><label class="small" for="inputVar13">State</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
-          <tr><td><span class="form-group"><label class="small" for="inputVar13">RPM</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
-          <tr><td><span class="form-group"><label class="small" for="inputVar13">Inhale:Exhale</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
-          <tr><td><span class="form-group"><label class="small" for="inputVar13">Calibration [ms]</label></td><td><input class="form-control py-1 input-editable" id="readback_mode" type="number" value=1 name="variable6"  /></span></td></tr>
+          <tr><td><span class="form-group"><label class="small" for="inputVar11">Valve (Air)</label></td>
+            <td><input class="form-control py-1 input-editable" id="valve_air" type="number" value="1"   onclick="show_easy_numpad(this, valve_air_controller);lock();"  readOnly disabled/></td>
+
+          <tr><td><span class="form-group"><label class="small" for="inputVar12">Valve (O2)</label></td>
+            <td><input class="form-control py-1 input-editable" id="valve_o2" type="number" value="1"   onclick="show_easy_numpad(this, valve_02_controller);lock();"  readOnly disabled/></td>
+
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Inhale) [%]</label></td>
+            <td><input class="form-control py-1 input-editable" id="valve_inhale" type="number" value="1"   onclick="show_easy_numpad(this, valve_inhale_controller);lock();"  readOnly disabled/></td>
+
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Exhale) [%]</label></td>
+            <td><input class="form-control py-1 input-editable" id="valve_exhale" type="number" value="1"   onclick="show_easy_numpad(this, valve_exhale_controller);lock();"  readOnly disabled/></td>
+
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">Valve (Purge)</label></td>
+            <td><input class="form-control py-1 input-editable" id="valve_exhale" type="number" value="1"   onclick="show_easy_numpad(this, valve_purge_controller);lock();"  readOnly disabled/></td>
+
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">PEEP [cmH2O]</label></td>
+            <td><input class="form-control py-1 input-editable" id="peep" type="number" value="1"   onclick="show_easy_numpad(this, purge_controller);lock();"  readOnly disabled/></td>
+
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">State</label></td>
+            <td><input class="form-control py-1 input-editable" id="state" type="number" value="1"   onclick="show_easy_numpad(this, state_controller);lock();"  readOnly disabled/></td>
+
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">RPM</label></td>
+            <td><input class="form-control py-1 input-editable" id="rpm" type="number" value="1"   onclick="show_easy_numpad(this, rpm_controller);lock();"  readOnly disabled/></td>
+
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">Inhale:Exhale</label></td>
+            <td><input class="form-control py-1 input-editable" id="inhale_exhale" type="number" value="1"   onclick="show_easy_numpad(this, inhale_exhale_controller);lock();"  readOnly disabled/></td>
+
+          <tr><td><span class="form-group"><label class="small" for="inputVar13">Calibration [ms]</label></td>
+            <td><input class="form-control py-1 input-editable" id="calibration" type="number" value="1"   onclick="show_easy_numpad(this, calibration_controller);lock();"  readOnly disabled/></td>
+
             </table></td>
           </tr>
           </table>
@@ -148,8 +178,28 @@ function sendCmd(var_name, var_value) {
   }
 }
 
-buffer_fill_controller = new input_controller("buffer_fill", document.getElementById("pressure_air_supply"));
-buffer_flush_controller = new input_controller("buffer_fill", document.getElementById("pressure_air_regulated"));
+buff_fill_controller = new input_controller("buff_fill", document.getElementById("buff_fill"));
+buff_flush_controller = new input_controller("buff_flush", document.getElementById("buff_flush"));
+buff_loaded_controller = new input_controller("buff_loaded", document.getElementById("buff_loaded"));
+buff_prefill_controller = new input_controller("buff_prefill", document.getElementById("buff_prefill"));
+buff_preinhale_controller = new input_controller("buff_pre_inhale", document.getElementById("buff_pre_inhale"));
+buff_purge_controller = new input_controller("buff_purge", document.getElementById("buff_purge"));
+inhale_controller = new input_controller("inhale", document.getElementById("inhale"));
+pause_controller = new input_controller("pause", document.getElementById("pause"));
+exhale_controller = new input_controller("exhale", document.getElementById("exhale"));
+exhale_fill_controller = new input_controller("exhale_fill", document.getElementById("exhale_fill"));
+
+
+//valve_air_controller = new input_controller("valve_air", document.getElementById("valve_air"));
+//valve_o2_controller = new input_controller("valve_o2", document.getElementById("valve_o2"));
+//valve_inhale_controller = new input_controller("valve_inhale", document.getElementById("valve_inhale"));
+//valve_exhale_controller = new input_controller("valve_exhale", document.getElementById("valve_exhale"));
+//peep_controller = new input_controller("peep", document.getElementById("peep"));
+//state_controller = new input_controller("state", document.getElementById("state"));
+//rpm_controller = new input_controller("rpm", document.getElementById("rpm"));
+//inhale_exhale_controller = new input_controller("inhale_exhale", document.getElementById("inhale_exhale"));
+calibration_controller = new input_controller("calibration", document.getElementById("calibration"));
+
 
 
 </script>
